color change for h1 tag

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -19,7 +19,7 @@
   }
   
   h1{
-    color:white;
+    color:green;
     text-align: center;
     margin-bottom: 0.5em;
     font-family: sans-serif;
