--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Jersey+10&display=swap');
+
 *{
    margin: 10px;
    padding: 0;
@@ -9,6 +11,12 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    background-image: url(/img.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    position:static;
+    overflow: hidden;
+    width:100%;
   }
   
   .container{
@@ -16,14 +24,34 @@
     padding: 10px 24px;
     border-radius: 10px;
     width: 490px;
+    background-color: rgba(238, 238, 236, 0.6) ;
   }
   
   h1{
-    color:green;
+    font-family: "Jersey 10", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    color:brown;
     text-align: center;
     margin-bottom: 0.5em;
-    font-family: sans-serif;
+    background: linear-gradient(90deg,
+                hsla(17, 90%, 52%, 0.833),
+                hsla(51, 92%, 49%, 0));
+    box-shadow:0 1px 12px hsla(109, 96%, 18%, 0.9);   
+    animation: blinkColor 1s infinite; 
   }
+  @keyframes blinkColor {
+    0%{
+        color: brown; /* Starting color */
+    }
+    50% {
+        color: red; /* Intermediate color */
+    }
+    100% {
+      color:black;
+    }
+}
+
   .container .box{
     width: 100%;
     display: flex;
@@ -78,7 +106,11 @@
     cursor: pointer;
     font-size: 1em;
     margin: 0.5em 0;
-  
+  }
+
+  button:hover{
+    background-color:green;
+    filter:brightness(2)
   }
 
   @media(max-width:500px){
