--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Jersey+10&display=swap');
 
 *{
-   margin: 10px;
+   margin: 0;
    padding: 0;
    box-sizing: border-box;
 }
@@ -11,7 +11,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background-image: url(/img.jpg);
+    background-image: url(/IMAGE/img.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     position:static;
